--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="hand__section__bottom hand__skew">           
                             
                                 <div class="bazooka">
-                                    <img src="img/icons8-anti-50.png" alt="case">
+                                    <img src="img/icons8-anti-50.png" alt="bazooka">
                                 </div>
                             
                             <div class="wirst"></div>
