--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
                         <div class="hand__section__top"></div>
                         <div class="elbow"></div>
-                        <div class="hand__section__bottom hand__skew">           
+                        <div class="hand__section__bottom left__skew">           
                             
                                 <div class="bazooka">
                                     <img src="img/icons8-anti-50.png" alt="bazooka">
