--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     
                     <div class="hand left">
         
-                        <div class="hand__section__top">
+                        <div class="hand__section__top on__shoulder">
 
    <div class="bazooka">
                                     <img src="img/icons8-anti-50.png" alt="bazooka">
